# code-index-mcp

./: .code-index.yaml  .gitignore  CHANGELOG.md  CHUNKED_FILE_PROCESSING.md  Dockerfile  FILTERING.md  FIXES_SUMMARY.md  FORK_SUMMARY.md  LAZY_LOADING_IMPLEMENTATION.md  LICENSE  MCP_CONFIGURATION.md  README.md  README_zh.md  TEST_RESULTS.md  config.yaml  example_client.py  project_settings.py  pyproject.toml  requirements.txt  run.py  server.py  test_server.py
.claude/: settings.local.json
docs/: memory_management.md
src/code_index_mcp/: __init__.py  config_manager.py  constants.py  file_change_tracker.py  ignore_patterns.py  incremental_indexer.py  lazy_loader.py  lru_cache.py  memory_profiler.py  optimized_project_settings.py  parallel_processor.py  performance_monitor.py  progress_tracker.py  project_settings.py  server.py  server.py.backup
src/code_index_mcp/search/: async_search.py  base.py  basic.py  ripgrep.py  ugrep.py  zoekt.py
src/code_index_mcp/storage/: __init__.py  sqlite_storage.py  storage_interface.py  trie_index.py
