[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index-mcp"
version = "2.0.0"
description = "Code indexing and analysis tools for LLMs using MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "johnhuang316"}
]
dependencies = [
    "mcp>=0.3.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/johnhuang316/code-index-mcp"
"Bug Tracker" = "https://github.com/johnhuang316/code-index-mcp/issues"

[project.scripts]
code-index-mcp = "code_index_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
